--- a/3.Data-Versioning-Control/Mycode.ipynb
+++ b/3.Data-Versioning-Control/Mycode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,9 +26,9 @@
     "df = pd.DataFrame(data)\n",
     "\n",
     "# # Adding new row to df for V2\n",
-    "new_row_loc = {'Name': 'GF1', 'Age': 20, 'City': 'City1'}\n",
-    "df.loc[len(df.index)] = new_row_loc\n",
-    "\n",
+    "# new_row_loc = {'Name': 'GF1', 'Age': 20, 'City': 'City1'}\n",
+    "# df.loc[len(df.index)] = new_row_loc\n",
+    "# #\n",
     "# # Adding new row to df for V3\n",
     "new_row_loc2 = {'Name': 'GF2', 'Age': 30, 'City': 'City2'}\n",
     "df.loc[len(df.index)] = new_row_loc2\n",
@@ -45,6 +45,13 @@
     "\n",
     "print(f\"CSV file saved to {file_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
